# telnyx-offleash

./: .env.example  .gitignore  BENCHMARK.md  DISCOVERY.md  README.md  pyproject.toml
bench/: __init__.py  analyze.py  controller.py  recorder.py
bench/data/: run1.jsonl  run2.jsonl  run3.jsonl  summary.json
offleash/: __init__.py  __main__.py  agent.py  conversation.py  logging.py  metrics.py  prompts.py  server.py  settings.py  telnyx.py  tools.py  turn_manager.py  types.py
tests/: conftest.py  test_agent.py  test_bench.py  test_prompts.py  test_server.py  test_settings.py  test_tools.py  test_turn_manager.py  test_webhook.py
